<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gainsboro"
    tools:context=".controller.QuesAnsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GainsboroDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolBarTheme">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/trivia"
            android:textColor="@color/GainsboroDarker"
            android:textSize="24sp"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 1"
            app:buttonTint="@android:color/holo_blue_dark" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 2"
            app:buttonTint="@android:color/holo_blue_dark" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 3"
            app:buttonTint="@android:color/holo_blue_dark" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="option 4"
            app:buttonTint="@android:color/holo_blue_dark" />

    </RadioGroup>

    <Button
        android:id="@+id/nextTwoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_and_next"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <TextView
        android:id="@+id/selectOptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_only_1_or_more_option"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/questionTV"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>